# ClassificacaoProcons

./: .gitignore  AGENTS.md  Dockerfile  README.md  cloudbuild-contratos-initial.yaml  cloudbuild-contratos.yaml  cloudbuild.yaml  pyproject.toml
.cursor/: environment.json
docs/: agente-juridico.md  ativar-24h-simples.md  automacao-contratos-roadmap.md  cloud-agent-autonomia.md  deploy-24h.md  deploy-contratos-webhook.md  modo-manual-sem-cloud-run.md  proconsumidor-local.md
scripts/: cleanup_contratos_duplicates.py  cleanup_controle_duplicates.py  deploy-contratos-cloud-run.sh  discover-drive-contratos-folders.py  docker-entrypoint.sh  install-cron.sh  install-proconsumidor-cron.sh  resolve-autentique-document-id.py  run-pipeline.sh  run-proconsumidor-process.sh  run-scheduler.sh  setup-gcp-scheduler.sh  setup-integration-prd-secrets.sh  setup_monday_contrato_relacionado.py  start-scheduler.sh  upload-contratos-secrets.sh  upload-gcp-secrets.sh
tests/: test_alerj_attachments.py  test_alerj_deadlines.py  test_alerj_email_parser.py  test_alerj_pdf_parser.py  test_alerj_pipeline.py  test_autentique_fully_signed.py  test_campinas_deadlines.py  test_campinas_email_parser.py  test_campinas_pipeline.py  test_contratos_autentique_webhook.py  test_contratos_catch_up.py  test_contratos_controle_register.py  test_contratos_controle_signature.py  test_contratos_controle_sync.py  test_contratos_drive_routing.py  test_contratos_monday_contracts.py  test_contratos_monday_setup.py  test_contratos_monday_webhook.py  test_contratos_parent_resolver.py  test_contratos_pipeline.py  (+59 more)
(+119 files in other folders)
